force-app/main/default/objects/synety__Synety_Campaign_Contact_Transfer_Rule__c/synety__Synety_Campaign_Contact_Transfer_Rule__c.object-meta.xml
<CustomObject>
    <description>An Object is used to save the Rules for automate contacts to particular Campaign.</description>
    <label>CloudCall Campaign Contact Transfer Rule</label>
    <nameField>
        <displayFormat>Rule-{0000}</displayFormat>
        <label>Campaign Contact Transfer Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CloudCall Campaign Contact Transfer Rule</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>