force-app/main/default/objects/synety__Synety_Campaign_Contact_Transfer_Rule__c/fields/synety__Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>synety__Campaign_ID__c</fullName>
    <label>Campaign ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>