force-app/main/default/objects/synety__Synety_Campaign_Contact_Transfer_Rule__c/fields/synety__Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>synety__Campaign_Name__c</fullName>
    <label>Campaign Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>