force-app/main/default/objects/synety__Synety_Campaign_Contact_Transfer_Rule__c/fields/synety__Formula__c.field-meta.xml
<CustomField>
    <fullName>synety__Formula__c</fullName>
    <label>Formula</label>
    <length>255</length>
    <type>Text</type>
</CustomField>