force-app/main/default/objects/synety__Synety_Campaign_Contact_Transfer_Rule__c/fields/synety__Priority__c.field-meta.xml
<CustomField>
    <fullName>synety__Priority__c</fullName>
    <label>Priority</label>
    <length>50</length>
    <type>Text</type>
</CustomField>