force-app/main/default/objects/synety__Synety_Campaign_Contact_Transfer_Rule__c/fields/synety__Trigger__c.field-meta.xml
<CustomField>
    <fullName>synety__Trigger__c</fullName>
    <label>Trigger</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>On Insert Only</fullName>
                <default>true</default>
                <label>On Insert Only</label>
            </value>
            <value>
                <fullName>On Update Only</fullName>
            </value>
            <value>
                <fullName>On Insert and Update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>